--- a/pages/about_resume.html
+++ b/pages/about_resume.html
@@ -98,7 +98,7 @@
                     <div class="relative inline-block mb-6">
                         <div
                             class="w-48 h-48 lg:w-64 lg:h-64 rounded-full overflow-hidden border-4 border-accent/20 shadow-hover ambient-float mx-auto">
-                            <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            <img src="../assets/shafinazzz.jpeg"
                                 alt="Shafinaz - Professional Portrait" class="w-full h-full object-cover" loading="lazy"
                                 onerror="this.src='https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'; this.onerror=null;" />
                         </div>
@@ -147,7 +147,7 @@
                         <h2 class="text-fluid-2xl font-heading font-bold text-primary mb-6">About Me</h2>
                         <div class="prose prose-lg max-w-none">
                             <p class="text-fluid-base text-text-secondary mb-4 leading-relaxed">
-                                I'm a passionate creative professional with over 5 years of experience in digital design
+                                I'm a passionate creative professional with over 2+ years of experience in digital design
                                 and development.
                                 My journey began with a fascination for how technology can transform ideas into
                                 meaningful experiences that
