--- a/pages/contact.html
+++ b/pages/contact.html
@@ -147,7 +147,7 @@
                     <!-- Professional Photo -->
                     <div class="flex justify-center mb-8">
                         <div class="w-32 h-32 rounded-full overflow-hidden border-4 border-accent/20 shadow-hover">
-                            <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            <img src="../assets/shafinazzz.jpeg"
                                 alt="Shafinaz - Professional Portrait" class="w-full h-full object-cover" loading="lazy"
                                 onerror="this.src='https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'; this.onerror=null;" />
                         </div>
