--- a/pages/about_resume.html
+++ b/pages/about_resume.html
@@ -115,16 +115,16 @@
 
                     <!-- Download Resume Button -->
                     <div class="mb-6">
-                        <a href="#" class="btn-primary inline-flex items-center gap-2 micro-interaction"
-                            onclick="downloadResume()">
-                            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
-                            </svg>
-                            Download Resume
-                            <span class="text-xs opacity-75">(PDF, 245KB)</span>
-                        </a>
-                    </div>
+    <a href="../resume/Shafinaz_Resume.pdf" class="btn-primary inline-flex items-center gap-2 micro-interaction" download>
+        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+        </svg>
+        Download Resume
+        <span class="text-xs opacity-75">(PDF, 245KB)</span>
+    </a>
+</div>
+
 
                     <!-- Quick Contact -->
                     <div class="card p-4">
