--- a/pages/about_resume.html
+++ b/pages/about_resume.html
@@ -98,8 +98,8 @@
                     <div class="relative inline-block mb-6">
                         <div
                             class="w-48 h-48 lg:w-64 lg:h-64 rounded-full overflow-hidden border-4 border-accent/20 shadow-hover ambient-float mx-auto">
-                            <img src="../assets/shafinazzz.jpeg"
-                                alt="Shafinaz - Professional Portrait" class="w-full h-full object-cover" loading="lazy"
+                            <img src="../assets/shafinazzz.jpeg" alt="Shafinaz - Professional Portrait"
+                                class="w-full h-full object-cover" loading="lazy"
                                 onerror="this.src='https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'; this.onerror=null;" />
                         </div>
                         <!-- Decorative Elements -->
@@ -115,7 +115,9 @@
 
                     <!-- Download Resume Button -->
                     <div class="mb-6">
-    <a href="../resume/Shafinaz_Resume.pdf" class="btn-primary inline-flex items-center gap-2 micro-interaction" download>
+    <a href="../resume/Shafinaz_Resume.pdf"
+       class="btn-primary inline-flex items-center gap-2 micro-interaction"
+       target="_blank" rel="noopener noreferrer">
         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                 d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
@@ -124,6 +126,7 @@
         <span class="text-xs opacity-75">(PDF, 245KB)</span>
     </a>
 </div>
+
 
 
                     <!-- Quick Contact -->
@@ -147,7 +150,8 @@
                         <h2 class="text-fluid-2xl font-heading font-bold text-primary mb-6">About Me</h2>
                         <div class="prose prose-lg max-w-none">
                             <p class="text-fluid-base text-text-secondary mb-4 leading-relaxed">
-                                I'm a passionate creative professional with over 2+ years of experience in digital design
+                                I'm a passionate creative professional with over 2+ years of experience in digital
+                                design
                                 and development.
                                 My journey began with a fascination for how technology can transform ideas into
                                 meaningful experiences that
